[package]
name = "Cat-Rust"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
dirs = "6.0.0"
rfd = "0.15.3"
md5 = "0.7.0"
rust-crypto = "0.2.36"
serde_json = "1.0"
reqwest = { version = "0.12.14", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
rand = "0.9.0"
hmac = "0.12.1"
sha2 = "0.10.8"
hex = "0.4.2"
regex = "1.11.1"
colored = "3.0.0"
zip = "2.4.2"