[package]
name = "Cat-Rust"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
dirs = "6.0.0"
rfd = "0.15.3"
md5 = "0.7.0"
rust-crypto = "0.2.36"
serde_json = { version = "1.0", features = ["preserve_order"] }
reqwest = { version = "0.12.15", features = ["json", "stream"] }
tokio = { version = "1.0", features = ["full"] }
rand = "0.9.0"
hmac = "0.12.1"
sha2 = "0.10.8"
hex = "0.4.2"
regex = "1.11.1"
colored = "3.0.0"
zip = "2.4.2"
futures = "0.3.31"
rsa = "0.9"
sha1 = { version = "0.10", features = ["oid"] }
pkcs8 = "0.10"
base64 = "0.22"
indicatif = "0.17.11"
ua_generator = { git = "https://github.com/spider-rs/ua_generator.git", version = "0.5.9" }
select = "0.6.0"
serde = "1.0"